package pij.day11.vehicles;

public interface HasPassengers {
    int getPassengerCount();
}
