package pij.day11.vehicles;

public interface HasSpecialRights {
    void toggleSpecialRights();
}
