package pij.day11.vehicles;

public class Tyre {
}
